k8s/production-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foodstore-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: foodstore.weerapatserver.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-user
                port:
                  number: 80

    - host: adminfoodstore.weerapatserver.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-admin
                port:
                  number: 80
